--- a/service.html
+++ b/service.html
@@ -1,46 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="utf-8">
-        <title>Discover the Best Russian Spa in Aerocity, Mahipalpur – Aerocity Spa!</title>
-        <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <link rel="icon" type="image/x-icon" href="/img/testimonial-2.jpg">
-        <meta name="author" content="Spa Aerocity">
-        <link rel="canonical" href="https://www.aerocityspa.in/service.html" />
-        <meta name="robots" content="follow, index, max-snippet:-1, max-video-preview:-1, max-image-preview:large" />
-        <meta name="description"content=" Russian Spa in Aerocity, Mahipalpur. Enjoy luxurious massages and rejuvenating treatments. Call +919319033293 to book today. " />
-        <!-- Google Web Fonts -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=PT+Serif:wght@400;700&display=swap" rel="stylesheet"> 
+<head>
+    <meta charset="utf-8">
+    <title>Discover the Best Russian Spa in Aerocity, Mahipalpur – Aerocity Spa!</title>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <link rel="icon" type="image/x-icon" href="/img/testimonial-2.jpg">
+    <meta name="author" content="Spa Aerocity">
+    <link rel="canonical" href="https://www.aerocityspa.in/service.html" />
+    <meta name="robots" content="follow, index, max-snippet:-1, max-video-preview:-1, max-image-preview:large" />
+    <meta name="description"
+        content=" Russian Spa in Aerocity, Mahipalpur. Enjoy luxurious massages and rejuvenating treatments. Call +919319033293 to book today. " />
+    <!-- Google Web Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=PT+Serif:wght@400;700&display=swap"
+        rel="stylesheet">
 
-        <!-- Icon Font Stylesheet -->
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+    <!-- Icon Font Stylesheet -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
 
-        <!-- Libraries Stylesheet -->
-        <link href="lib/animate/animate.min.css" rel="stylesheet">
-        <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
-        <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <!-- Libraries Stylesheet -->
+    <link href="lib/animate/animate.min.css" rel="stylesheet">
+    <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
+    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 
 
-        <!-- Customized Bootstrap Stylesheet -->
-        <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- Customized Bootstrap Stylesheet -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
-        <!-- Template Stylesheet -->
-        <link href="css/style.css" rel="stylesheet">
-    </head>
+    <!-- Template Stylesheet -->
+    <link href="css/style.css" rel="stylesheet">
+</head>
 
-    <body>
+<body>
 
-        <!-- Spinner Start -->
-        <div id="spinner" class="show w-100 vh-100 bg-white position-fixed translate-middle top-50 start-50  d-flex align-items-center justify-content-center">
-            <div class="spinner-grow text-primary" role="status"></div>
-        </div>
-        <!-- Spinner End -->
+    <!-- Spinner Start -->
+    <div id="spinner"
+        class="show w-100 vh-100 bg-white position-fixed translate-middle top-50 start-50  d-flex align-items-center justify-content-center">
+        <div class="spinner-grow text-primary" role="status"></div>
+    </div>
+    <!-- Spinner End -->
 
 
     <!-- Navbar start -->
@@ -67,7 +71,8 @@
                             <a href="https://x.com/_AerocitySpa" target="_blank"
                                 class="me-3 btn-square border rounded-circle nav-fill"><i
                                     class="fab fa-twitter"></i></a>
-                            <a href="https://www.instagram.com/aerocity.spa/" target="_blank" class="me-3 btn-square border rounded-circle nav-fill"><i
+                            <a href="https://www.instagram.com/aerocity.spa/" target="_blank"
+                                class="me-3 btn-square border rounded-circle nav-fill"><i
                                     class="fab fa-instagram"></i></a>
                             <a href="https://www.linkedin.com/in/aerocityspa/" target="_blank"
                                 class="btn-square border rounded-circle nav-fill"><i class="fab fa-linkedin-in"></i></a>
@@ -117,39 +122,40 @@
     <!-- Navbar End -->
 
 
-        <!-- Modal Search Start -->
-        <div class="modal fade" id="searchModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-fullscreen">
-                <div class="modal-content rounded-0">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Search by keyword</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body d-flex align-items-center">
-                        <div class="input-group w-75 mx-auto d-flex">
-                            <input type="search" class="form-control p-3" placeholder="keywords" aria-describedby="search-icon-1">
-                            <span id="search-icon-1" class="input-group-text p-3"><i class="fa fa-search"></i></span>
-                        </div>
+    <!-- Modal Search Start -->
+    <div class="modal fade" id="searchModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-fullscreen">
+            <div class="modal-content rounded-0">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Search by keyword</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body d-flex align-items-center">
+                    <div class="input-group w-75 mx-auto d-flex">
+                        <input type="search" class="form-control p-3" placeholder="keywords"
+                            aria-describedby="search-icon-1">
+                        <span id="search-icon-1" class="input-group-text p-3"><i class="fa fa-search"></i></span>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Modal Search End -->
+    </div>
+    <!-- Modal Search End -->
 
 
 
-        <!-- Header Start -->
-        <div class="container-fluid bg-breadcrumb py-5">
-            <div class="container text-center py-5">
-                <h3 class="text-white display-3 mb-4">Our Services</h2>
+    <!-- Header Start -->
+    <div class="container-fluid bg-breadcrumb py-5">
+        <div class="container text-center py-5">
+            <h3 class="text-white display-3 mb-4">Our Services</h2>
                 <ol class="breadcrumb justify-content-center mb-0">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                     <li class="breadcrumb-item"><a href="#">Pages</a></li>
                     <li class="breadcrumb-item active text-white">Service Page</li>
-                </ol>    
-            </div>
+                </ol>
         </div>
-        <!-- Header End -->
+    </div>
+    <!-- Header End -->
     <!-- whatsapp Massge And Call call  -->
 
     <div class="call_main">
@@ -165,7 +171,7 @@
     </div>
 
     <!-- End - whatsapp Massge And Call call  -->
-        
+
     <!-- Services Start -->
     <div class="container-fluid services ">
         <div class="container ">
@@ -365,6 +371,86 @@
     </div>
     <!-- Services End -->
 
+    <!-- Content Start   -->
+
+    <div class="container-fluid py-4">
+        <div class="container ">
+            <h3>
+                <strong>Luxurious Massage Services at Russian Spa Aerocity</strong>
+            </h3>
+            <p>
+                At <strong>Russian Spa Aerocity</strong>, we offer a wide range of premium massage therapies designed to
+                relax, rejuvenate, and revitalize your mind and body. Whether you're looking for a soothing escape with
+                a <strong>relaxation massage</strong> or the invigorating benefits of a <strong>deep tissue
+                    massage</strong>, we provide personalized services to meet all your wellness needs.
+            </p>
+            <p>
+                Our expert therapists use specialized techniques to ensure you experience the ultimate in luxury and
+                comfort. Located conveniently in the heart of Aerocity, we are known for providing the best <strong>full
+                    body massage</strong> services, including traditional and modern therapies that cater to all your
+                relaxation goals.
+            </p>
+            <h3>
+                Our Signature Massage Services
+            </h3>
+            <ol>
+                <li>
+                    <strong>Couple Massage</strong><br>
+                    Share a soothing experience with a loved one in our private couple suites. Our <strong>couple
+                        massage</strong> sessions are designed to bring harmony and relaxation, perfect for special
+                    occasions or simply a shared escape from the hustle and bustle.
+                </li>
+                <li>
+                    <strong>Relaxation Massage</strong><br>
+                    Let go of your stress and unwind with our calming <strong>relaxation massage</strong>. This gentle
+                    therapy focuses on releasing tension, improving circulation, and providing a serene environment to
+                    melt away your worries.
+                </li>
+                <li>
+                    <strong>Full Body Massage</strong><br>
+                    Our comprehensive <strong>full body massage</strong> ensures relaxation from head to toe. Using a
+                    combination of techniques, we target every muscle group to relieve tension and promote overall
+                    well-being.
+                </li>
+                <li>
+                    <strong>Thai Massage</strong><br>
+                    Experience the ancient art of <strong>Thai massage</strong>, which combines stretching, acupressure,
+                    and rhythmic compression to align the body and mind. Perfect for those seeking a deep, therapeutic
+                    treatment.
+                </li>
+                <li>
+                    <strong>Swedish Massage</strong><br>
+                    Our <strong>Swedish massage</strong> is designed to enhance circulation, relieve muscle tension, and
+                    promote relaxation. This popular therapy is ideal for anyone looking to refresh their body with
+                    light to medium pressure techniques.
+                </li>
+                <li>
+                    <strong>Deep Tissue Massage</strong><br>
+                    For those who need targeted relief, our <strong>deep tissue massage</strong> focuses on the deeper
+                    layers of muscles to alleviate chronic pain and tension. This intense massage is perfect for
+                    individuals with specific muscle discomfort.
+                </li>
+                <li>
+                    <strong>French Aroma Massage</strong><br>
+                    Indulge your senses with our luxurious <strong>French aroma massage</strong>, which uses aromatic
+                    essential oils to enhance relaxation, improve mood, and nourish the skin. This treatment is perfect
+                    for those looking for a fragrant, calming experience.
+                </li>
+                <li>
+                    <strong>Four-Hand Massage</strong><br>
+                    Double the relaxation with our signature <strong>four-hand massage</strong>, where two skilled
+                    therapists work in perfect harmony to provide a synchronized massage experience. This deeply
+                    indulgent treatment offers unparalleled relaxation and stress relief.
+                </li>
+            </ol>
+            <p>
+                At <strong>Russian Spa Aerocity</strong>, we are dedicated to providing top-notch services in a tranquil
+                environment. Whether you're visiting us for a single session or indulging in a spa day, we ensure that
+                every experience leaves you refreshed and revitalized. Book your appointment today and experience the
+                finest massage therapies in Aerocity.
+            </p>
+        </div>
+    </div>
 
 
     <!-- Contact Start -->
@@ -417,7 +503,8 @@
                             <a href="https://x.com/_AerocitySpa" target="_blank"
                                 class="btn btn-light btn-light-outline-0 btn-square rounded-circle me-3"><i
                                     class="fab fa-twitter"></i></a>
-                            <a href="https://www.instagram.com/aerocity.spa/" target="_blank" class="btn btn-light btn-light-outline-0 btn-square rounded-circle me-3"><i
+                            <a href="https://www.instagram.com/aerocity.spa/" target="_blank"
+                                class="btn btn-light btn-light-outline-0 btn-square rounded-circle me-3"><i
                                     class="fab fa-instagram"></i></a>
                             <a href="https://www.linkedin.com/in/aerocityspa/" target="_blank"
                                 class="btn btn-light btn-light-outline-0 btn-square rounded-circle"><i
@@ -477,9 +564,12 @@
                 <div class="col-md-6 col-lg-6 col-xl-3">
                     <div class="footer-item d-flex flex-column">
                         <h4 class="mb-4 text-white">Follow Us</h4>
-                        <a href="https://www.facebook.com/profile.php?id=61560884642560" target="_blank"><i class="fas fa-angle-right me-2"></i> Faceboock</a>
-                        <a href="https://www.instagram.com/aerocity.spa/" target="_blank"><i class="fas fa-angle-right me-2" ></i> Instagram</a>
-                        <a href="https://x.com/_AerocitySpa" target="_blank"><i class="fas fa-angle-right me-2"></i> Twitter</a>
+                        <a href="https://www.facebook.com/profile.php?id=61560884642560" target="_blank"><i
+                                class="fas fa-angle-right me-2"></i> Faceboock</a>
+                        <a href="https://www.instagram.com/aerocity.spa/" target="_blank"><i
+                                class="fas fa-angle-right me-2"></i> Instagram</a>
+                        <a href="https://x.com/_AerocitySpa" target="_blank"><i class="fas fa-angle-right me-2"></i>
+                            Twitter</a>
                         <h4 class="my-4 text-white">Contact Us</h4>
                         <p class="mb-0"><i class="fas fa-envelope text-secondary me-2"></i> aerocityspa9975@gmail.com
                         </p>
@@ -493,15 +583,15 @@
 
 
 
-<!-- Copyright Start -->
-<div class="container-fluid copyright py-4">
-    <div class="container">
-        <div class="row g-4 align-items-center">
-            <div class="col-md-6 text-center text-md-start mb-md-0">
-                <span class="text-light"><a href="#"><i class="fas fa-copyright text-light me-2"></i>2024 Russian
-                        Spa Aerocity.</a> All right reserved.</span>
-            </div>
-            <!-- <div class="col-md-4">
+    <!-- Copyright Start -->
+    <div class="container-fluid copyright py-4">
+        <div class="container">
+            <div class="row g-4 align-items-center">
+                <div class="col-md-6 text-center text-md-start mb-md-0">
+                    <span class="text-light"><a href="#"><i class="fas fa-copyright text-light me-2"></i>2024 Russian
+                            Spa Aerocity.</a> All right reserved.</span>
+                </div>
+                <!-- <div class="col-md-4">
                 <div class="d-flex justify-content-center">
                     <a href="" class="btn btn-light btn-light-outline-0 btn-sm-square rounded-circle me-2"><i
                             class="fab fa-facebook-f"></i></a>
@@ -513,21 +603,21 @@
                             class="fab fa-linkedin-in"></i></a>
                 </div>
             </div> -->
-            <div class="col-md-4 text-center text-md-end text-white">
-                <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
-                <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
-                <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
-                Designed By <a class="border-bottom" href="#">RR TECH</a>
+                <div class="col-md-4 text-center text-md-end text-white">
+                    <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
+                    <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
+                    <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
+                    Designed By <a class="border-bottom" href="#">RR TECH</a>
+                </div>
             </div>
         </div>
     </div>
-</div>
-<!-- Copyright End -->
+    <!-- Copyright End -->
 
 
 
 
-        
+
     <!-- JavaScript Libraries -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -540,6 +630,6 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
-    </body>
+</body>
 
 </html>
